# capsaicin

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  JOURNEY.md  LICENSE-APACHE  README.md  SECURITY.md
crates/capsaicin-cli/: Cargo.toml
crates/capsaicin-cli/src/: main.rs  viewer.rs
crates/capsaicin-client/: Cargo.toml
crates/capsaicin-client/src/: client.rs  cursor.rs  display.rs  error.rs  events.rs  inputs.rs  lib.rs  mjpeg.rs
crates/capsaicin-client/tests/: smoke.rs
crates/capsaicin-glz/: Cargo.toml
crates/capsaicin-glz/src/: lib.rs
crates/capsaicin-lz/: Cargo.toml
crates/capsaicin-lz/src/: lib.rs
crates/capsaicin-net/: Cargo.toml
crates/capsaicin-net/src/: auth.rs  channel.rs  client.rs  error.rs  lib.rs  link.rs  server.rs  tls.rs
crates/capsaicin-proto/: Cargo.toml
crates/capsaicin-proto/src/: caps.rs  common.rs  cursor.rs  display.rs  draw.rs  enums.rs  error.rs  header.rs  image.rs  inputs.rs  lib.rs  limits.rs  link.rs  main_chan.rs  stream.rs  types.rs
crates/capsaicin-quic/: Cargo.toml
crates/capsaicin-quic/src/: lib.rs
crates/capsaicin-server/: Cargo.toml
crates/capsaicin-server/src/: lib.rs
crates/capsaicin-server/tests/: end_to_end.rs
crates/capsaicin-wasm/: Cargo.toml  README.md
crates/capsaicin-wasm/src/: lib.rs
inbox/: cursor-channel-priority.md  reply-mouse-mode-and-cursor.md  request-client-mouse-mode.md  virtmanager-rs-display-events.md  virtmanager-rs-sticky-keys.md
